Clients/talix-hipaa/templates/vpc-dev.yml
---
AWSTemplateFormatVersion: 2010-09-09
Description: Provides networking configuration for a standard, public facing development,
  separates private-public subnets and enforces traffic with NACL rules (qs-1nb14cqcl)
# Metadata:
#   Stack:
#     Value: 2
#   VersionDate:
#     Value: 20160510
#   Identifier:
#     Value: template-vpc-production
#   Input:
#     Description: CIDR blocks, VPC names, KeyName, EC2 instance size
#   Output:
#     Description: Outputs ID of all deployed resources
#   AWS::CloudFormation::Interface:
#     ParameterGroups:
#     - Label:
#         default: Region Config
#       Parameters:
#       - pRegionAZ1Name
#       - pRegionAZ2Name
#     - Label:
#         default: Production VPC Config
#       Parameters:
#       - pBastionSSHCIDR
#       - pProductionVPCName
#       - pProductionCIDR
#       - pDMZSubnetACIDR
#       - pDMZSubnetBCIDR
#       - pAppPrivateSubnetACIDR
#       - pAppPrivateSubnetBCIDR
#       - pDBPrivateSubnetACIDR
#       - pDBPrivateSubnetBCIDR
#       - pEC2KeyPair
#       - pVPCTenancy
#     - Label:
#         default: AWS Quick Start Configuration
#       Parameters:
#       - QSS3BucketName
#       - QSS3KeyPrefix
#     ParameterLabels:
#       pProductionVPCName:
#         default: Name of Production VPC
#       pProductionCIDR:
#         default: Production VPC CIDR block
#       pDMZSubnetACIDR:
#         default: CIDR block of DMZ A subnet (internet facing)
#       pDMZSubnetBCIDR:
#         default: CIDR block of DMZ B subnet (internet facing)
#       pAppPrivateSubnetACIDR:
#         default: CIDR block of Development B subnet (private)
#       pAppPrivateSubnetBCIDR:
#         default: CIDR block of Development A subnet (private)
#       pDBPrivateSubnetACIDR:
#         default: CIDR block of Database A subnet (private)
#       pDBPrivateSubnetBCIDR:
#         default: CIDR block of Database B subnet (private)
#       pEC2KeyPair:
#         default: Name of existing SSH Key for NAT Instance
#       pVPCTenancy:
#         default: Instance tenancy
#       QSS3BucketName:
#         default: Quick Start S3 Bucket Name
#       QSS3KeyPrefix:
#         default: Quick Start S3 Key Prefix
Parameters:
  pBastionSSHCIDR:
    Description: CIDR block to allow access to bastion SSH
    Type: String
    Default: 0.0.0.0/0
  pRegionAZ1Name:
    Description: Availability Zone 1 Name in Region
    Type: AWS::EC2::AvailabilityZone::Name
  pRegionAZ2Name:
    Description: Availability Zone 2 Name in Region
    Type: AWS::EC2::AvailabilityZone::Name
  pDevelopmentVPCName:
    Description: Development VPC Name
    Type: String
    Default: CommandCentral-Development
  pDevelopmentCIDR:
    Description: CIDR block for Development VPC
    Type: String
  pManagementCIDR:
    Description: CIDR of Management VPC
    Type: String
  pDMZSubnetACIDR:
    Description: CIDR block for DMZ AZ-1b subnet
    Type: String
  pDMZSubnetBCIDR:
    Description: CIDR block for DMZ AZ-1b subnet
    Type: String
  pDevPrivateSubnetACIDR:
    Description: CIDR block for Development AZ-1a subnet
    Type: String
  pDevPrivateSubnetBCIDR:
    Description: CIDR block for Development AZ-1b subnet
    Type: String
  pDBPrivateSubnetACIDR:
    Description: CIDR block for Private AZ-1a subnet
    Type: String
  pDBPrivateSubnetBCIDR:
    Description: CIDR block for Private AZ-1b subnet
    Type: String
  pEC2KeyPair:
    Description: Name of existing EC2 key pair for development hosts
    Type: String
    Default: ''
  pVPCTenancy:
    Description: Instance tenancy behavior for this VPC
    Type: String
    Default: default
    AllowedValues:
    - default
    - dedicated
  pEnvironment:
    Description: Environment (development, test, or production)
    Type: String
    Default: development
  pSupportsNatGateway:
    Description: Specifies whether this region supports NAT Gateway (this value is
      determined by the main stack if it is invoked from there)
    Type: String
    Default: true
  pNatAmi:
    Description: AMI to use for the NAT intstance if the region does not support NAT
      Gateway (this value is determined by the main stack if it is invoked from there)
    Type: String
    Default: ''
  pNatInstanceType:
    Description: Instance type to use for the NAT intstance if the region does not
      support NAT Gateway (this value is determined by the main stack if it is invoked
      from there)
    Type: String
    Default: ''
  pFlowLogGroup:
    Description: Log Group for capturing VPC Flow Logs
    Type: String
    Default: ''
  rVPCManagement:
    Description: Management VPC to peer with (optional)
    Type: String
    Default: ''
  rRouteTableMgmtPrivate:
    Description: Management VPC to peer with (optional)
    Type: String
    Default: ''
  rRouteTableMgmtDMZ:
    Description: Management VPC to peer with (optional)
    Type: String
    Default: ''
Conditions:
  cGovCloudCondition:
    !Equals
    - !Ref AWS::Region
    - us-gov-west-1
  cNeedNatInstance:
    !Equals
    - false
    - !Ref pSupportsNatGateway
  cSupportsNatGateway:
    !Equals
    - true
    - !Ref pSupportsNatGateway
  cEnableFlowLogs:
    !Not
    - !Equals
      - !Ref pFlowLogGroup
      - ''
  
Resources:
  rVPCDevelopment:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref pDevelopmentCIDR
      InstanceTenancy: !Ref pVPCTenancy
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: !Ref pDevelopmentVPCName
      - Key: Environment
        Value: !Ref pEnvironment

  FlowLogRole:
    Type: AWS::IAM::Role
    Properties:
      Path: /
      RoleName: vpc-flowlog-role-dev
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement: 
        - Effect: Allow
          Principal: 
            Service: 
            - vpc-flow-logs.amazonaws.com
          Action: 
          - sts:AssumeRole
      Policies:
          - PolicyName: !Sub ssm-${AWS::StackName}
            PolicyDocument:
              Statement:
                - Effect: Allow
                  Action:
                    - logs:DescribeLogStreams
                    - logs:DescribeLogGroups
                    - logs:PutLogEvents
                    - logs:CreateLogStream
                    - logs:CreateLogGroup
                  Resource:
                    - "*"

  rVPCFlowLog:
    Type: AWS::EC2::FlowLog
    Properties:
      DeliverLogsPermissionArn: !GetAtt FlowLogRole.Arn
      LogGroupName: vpc-flowlog-dev
      ResourceId: !Ref rVPCDevelopment
      ResourceType: VPC
      TrafficType: ALL
      
  rSecurityGroupVpcNat:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow NAT from development
      VpcId: !Ref rVPCDevelopment
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: !Ref pDevelopmentCIDR
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: !Ref pDevelopmentCIDR
      Tags:
      - Key: Name
        Value: sg-web-access-ports-from-development
      - Key: Environment
        Value: !Ref pEnvironment
  rSecurityGroupMgmtBastion:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow Bastion from Management Network
      VpcId: !Ref rVPCDevelopment
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref pBastionSSHCIDR
      Tags:
      - Key: Name
        Value: sg-ssh-access-from-management-vpc
      - Key: Environment
        Value: !Ref pEnvironment
  rSecurityGroupSSHFromDev:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      VpcId: !Ref rVPCDevelopment
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref pDevelopmentCIDR
      Tags:
      - Key: Name
        Value: sg-enable-ssh-access
      - Key: Environment
        Value: !Ref pEnvironment
  rDMZSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref pDMZSubnetACIDR
      AvailabilityZone: !Ref pRegionAZ1Name
      VpcId: !Ref rVPCDevelopment
      Tags:
      - Key: Name
        Value: Development DMZ Subnet A
      - Key: Environment
        Value: !Ref pEnvironment
  rDMZSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref pDMZSubnetBCIDR
      AvailabilityZone: !Ref pRegionAZ2Name
      VpcId: !Ref rVPCDevelopment
      Tags:
      - Key: Name
        Value: Development DMZ Subnet B
      - Key: Environment
        Value: !Ref pEnvironment
  rDevPrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref pDevPrivateSubnetACIDR
      AvailabilityZone: !Ref pRegionAZ1Name
      VpcId: !Ref rVPCDevelopment
      Tags:
      - Key: Name
        Value: Development App Subnet A
      - Key: Environment
        Value: !Ref pEnvironment
  rDevPrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref pDevPrivateSubnetBCIDR
      AvailabilityZone: !Ref pRegionAZ2Name
      VpcId: !Ref rVPCDevelopment
      Tags:
      - Key: Name
        Value: Development App Subnet B
      - Key: Environment
        Value: !Ref pEnvironment
  rDBPrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref pDBPrivateSubnetACIDR
      AvailabilityZone: !Ref pRegionAZ1Name
      VpcId: !Ref rVPCDevelopment
      Tags:
      - Key: Name
        Value: Development DB Subnet A
      - Key: Environment
        Value: !Ref pEnvironment
  rDBPrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref pDBPrivateSubnetBCIDR
      AvailabilityZone: !Ref pRegionAZ2Name
      VpcId: !Ref rVPCDevelopment
      Tags:
      - Key: Name
        Value: Development DB Subnet B
      - Key: Environment
        Value: !Ref pEnvironment
  rIGWDev:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: igw-development
      - Key: Environment
        Value: !Ref pEnvironment
  rNACLPublic:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref rVPCDevelopment
  rNACLPrivate:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref rVPCDevelopment
  rRouteTableMain:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref rVPCDevelopment
      Tags:
      - Key: Name
        Value: Development DMZ Route
  rEIPDevNatA:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  rNATGatewaySubnetA:
    Type: AWS::EC2::NatGateway
    DependsOn: rIGWDev
    Condition: cSupportsNatGateway
    Properties:
      AllocationId: !GetAtt rEIPDevNatA.AllocationId
      SubnetId: !Ref rDMZSubnetA
  rEIPDevNatB:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  rNATGatewaySubnetB:
    Type: AWS::EC2::NatGateway
    DependsOn: rIGWDev
    Condition: cSupportsNatGateway
    Properties:
      AllocationId: !GetAtt rEIPDevNatB.AllocationId
      SubnetId: !Ref rDMZSubnetB
  rRouteDevIGW:
    Type: AWS::EC2::Route
    DependsOn: rGWAttachmentDevIGW
    Properties:
      RouteTableId: !Ref rRouteTableMain
      GatewayId: !Ref rIGWDev
      DestinationCidrBlock: 0.0.0.0/0
  rRouteDevPrivateNatGatewayA:
    Type: AWS::EC2::Route
    Condition: cSupportsNatGateway
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref rRouteTableDevPrivateA
      NatGatewayId: !Ref rNATGatewaySubnetA
  rRouteDevPrivateNatGatewayB:
    Type: AWS::EC2::Route
    Condition: cSupportsNatGateway
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref rRouteTableDevPrivateB
      NatGatewayId: !Ref rNATGatewaySubnetB
  rRouteAssocDevDMZA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref rRouteTableMain
      SubnetId: !Ref rDMZSubnetA
  rRouteAssocDevDMZB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref rRouteTableMain
      SubnetId: !Ref rDMZSubnetB
  rDevPrivateSubnetAssociationA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref rRouteTableDevPrivateA
      SubnetId: !Ref rDevPrivateSubnetA
  rDevPrivateSubnetAssociationB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref rRouteTableDevPrivateB
      SubnetId: !Ref rDevPrivateSubnetB
  rRouteAssocDBPrivateA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref rRouteTableDevPrivateA
      SubnetId: !Ref rDBPrivateSubnetA
  rRouteAssocDBPrivateB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref rRouteTableDevPrivateB
      SubnetId: !Ref rDBPrivateSubnetB
  rRouteTableDevPrivateA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref rVPCDevelopment
      Tags:
      - Key: Name
        Value: Development Private Route A
  rRouteTableDevPrivateB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref rVPCDevelopment
      Tags:
      - Key: Name
        Value: Development Private Route B
  rNACLRuleAllowAllTCPInternal:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: !Ref pDevelopmentCIDR
      Protocol: 6
      PortRange:
        From: 1
        To: 65535
      RuleAction: allow
      RuleNumber: 120
      NetworkAclId: !Ref rNACLPrivate
  rNACLRuleAllowBastionSSHAccessPrivate:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Protocol: 6
      PortRange:
        From: 22
        To: 22
      RuleAction: allow
      RuleNumber: 130
      NetworkAclId: !Ref rNACLPrivate
  rNACLRuleAllowMgmtAccessSSHtoPrivate:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: !Ref pManagementCIDR
      Protocol: 6
      PortRange:
        From: 22
        To: 22
      RuleAction: allow
      RuleNumber: 125
      NetworkAclId: !Ref rNACLPrivate
  rNACLRuleAllowReturnTCPPriv:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Protocol: 6
      PortRange:
        From: 1024
        To: 65535
      RuleAction: allow
      RuleNumber: 140
      NetworkAclId: !Ref rNACLPrivate
  rNACLRuleAllowALLfromPrivEgress:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: true
      Protocol: 6
      PortRange:
        From: 1
        To: 65535
      RuleAction: allow
      RuleNumber: 120
      NetworkAclId: !Ref rNACLPrivate
  rNACLRuleAllowAllTCPInternalEgress:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: true
      Protocol: 6
      PortRange:
        From: 1
        To: 65535
      RuleAction: allow
      RuleNumber: 100
      NetworkAclId: !Ref rNACLPrivate
  rNACLRuleAllowALLEgressPublic:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: true
      Protocol: 6
      PortRange:
        From: 1
        To: 65535
      RuleAction: allow
      RuleNumber: 100
      NetworkAclId: !Ref rNACLPublic
  rNACLRuleAllowAllReturnTCP:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Protocol: 6
      PortRange:
        From: 1024
        To: 65535
      RuleAction: allow
      RuleNumber: 140
      NetworkAclId: !Ref rNACLPublic
  rNACLRuleAllowHTTPfromDev:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: !Ref pDevelopmentCIDR
      Protocol: 6
      PortRange:
        From: 80
        To: 80
      RuleAction: allow
      RuleNumber: 200
      NetworkAclId: !Ref rNACLPublic
  rNACLRuleAllowBastionSSHAccessPublic:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Protocol: 6
      PortRange:
        From: 22
        To: 22
      RuleAction: allow
      RuleNumber: 210
      NetworkAclId: !Ref rNACLPublic
  rNACLRuleAllowEgressReturnTCP:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: true
      Protocol: 6
      PortRange:
        From: 1024
        To: 65535
      RuleAction: allow
      RuleNumber: 140
      NetworkAclId: !Ref rNACLPublic
  rNACLRuleAllowHTTPSPublic:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Protocol: 6
      PortRange:
        From: 443
        To: 443
      RuleAction: allow
      RuleNumber: 100
      NetworkAclId: !Ref rNACLPublic
  rNACLAssocDevPrivSubnetB:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref rNACLPrivate
      SubnetId: !Ref rDevPrivateSubnetB
  rNACLAssocDMZPubSubnetA:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref rNACLPublic
      SubnetId: !Ref rDMZSubnetA
  rNACLAssocDMZPubSubnetB:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref rNACLPublic
      SubnetId: !Ref rDMZSubnetB
  rNACLAssocDevPrivSubnetA:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref rNACLPrivate
      SubnetId: !Ref rDevPrivateSubnetA
  rNACLAssocDBPrivSubnetA:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref rNACLPrivate
      SubnetId: !Ref rDBPrivateSubnetA
  rNACLAssocDBPrivSubnetB:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref rNACLPrivate
      SubnetId: !Ref rDBPrivateSubnetB
  rGWAttachmentDevIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    DependsOn: rIGWDev
    Properties:
      VpcId: !Ref rVPCDevelopment
      InternetGatewayId: !Ref rIGWDev
  rDevelopmentVpcFlowLogsServiceRole:
    Condition: cEnableFlowLogs
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
        - Sid: AllowFlowLogs
          Effect: Allow
          Principal:
            Service: vpc-flow-logs.amazonaws.com
          Action: sts:AssumeRole
      Path: /
      Policies:
      - PolicyName: cloudwatchlogsrole
        PolicyDocument:
          Version: 2012-10-17
          Statement:
          - Action:
            - logs:CreateLogGroup
            - logs:CreateLogStream
            - logs:PutLogEvents
            - logs:DescribeLogGroups
            - logs:DescribeLogStreams
            Effect: Allow
            Resource: '*'
  rDevelopmentVpcFlowLog:
    Condition: cEnableFlowLogs
    Type: AWS::EC2::FlowLog
    Properties:
      DeliverLogsPermissionArn: !GetAtt rDevelopmentVpcFlowLogsServiceRole.Arn
      LogGroupName: !Ref pFlowLogGroup
      ResourceId: !Ref rVPCDevelopment
      ResourceType: VPC
      TrafficType: ALL
  rDevelopmentVpcFlowLogStream:
    Condition: cEnableFlowLogs
    Type: AWS::Logs::LogStream
    Properties:
      LogGroupName: !Ref pFlowLogGroup

  rPeeringConnectionDevelopment:
    Type: AWS::EC2::VPCPeeringConnection
    Properties:
      PeerVpcId: !Ref rVPCDevelopment
      VpcId: !Ref rVPCManagement
      Tags:
      - Key: Name
        Value: vpc-peer-development-management
      - Key: Environment
        Value: !Ref pEnvironment
  rRouteMgmtDevPrivate:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref rRouteTableMgmtPrivate
      VpcPeeringConnectionId: !Ref rPeeringConnectionDevelopment
      DestinationCidrBlock: !Ref pDevelopmentCIDR
  rRouteDevMgmt:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref rRouteTableDevPrivateA
      VpcPeeringConnectionId: !Ref rPeeringConnectionDevelopment
      DestinationCidrBlock: !Ref pManagementCIDR
  rRouteDevBMgmt:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref rRouteTableDevPrivateB
      VpcPeeringConnectionId: !Ref rPeeringConnectionDevelopment
      DestinationCidrBlock: !Ref pManagementCIDR
  rRouteDevMgmtPublic:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref rRouteTableMain
      VpcPeeringConnectionId: !Ref rPeeringConnectionDevelopment
      DestinationCidrBlock: !Ref pManagementCIDR
  rRouteMgmtDevDMZ:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref rRouteTableMgmtDMZ
      VpcPeeringConnectionId: !Ref rPeeringConnectionDevelopment
      DestinationCidrBlock: !Ref pDevelopmentCIDR
Outputs:
  rVPCDevelopment:
    Value: !Ref rVPCDevelopment
  rDMZSubnetA:
    Value: !Ref rDMZSubnetA
  rDMZSubnetB:
    Value: !Ref rDMZSubnetB
  rRouteTableDevPrivate:
    Value: !Ref rRouteTableDevPrivateA
  rRouteTableDevPrivateB:
    Value: !Ref rRouteTableDevPrivateB
  rRouteTableDevPublic:
    Value: !Ref rRouteTableMain
  rDevPrivateSubnetA:
    Value: !Ref rDevPrivateSubnetA
  rDevPrivateSubnetB:
    Value: !Ref rDevPrivateSubnetB
  rDBPrivateSubnetA:
    Value: !Ref rDBPrivateSubnetA
  rDBPrivateSubnetB:
    Value: !Ref rDBPrivateSubnetB
  rNACLPrivate:
    Value: !Ref rNACLPrivate
  rNACLPublic:
    Value: !Ref rNACLPublic
  rSecurityGroupSSHFromDev:
    Value: !Ref rSecurityGroupSSHFromDev
  rSecurityGroupVpcNat:
    Value: !Ref rSecurityGroupVpcNat
...
